--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,9 @@
-.Button {
+.button {
   padding: 8px 16px;
+  width: 120px;
+  margin: 0 auto;
   border-radius: 2px;
-  background-color: #3f51b5;
+  background-color: rgb(44, 105, 158);
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
@@ -19,7 +21,11 @@
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
-.Button:hover,
-.Button:focus {
+/* .button:hover,
+.button:focus {
   background-color: #303f9f;
+} */
+
+.button:disabled {
+  background: rgb(91, 148, 180);
 }
